connectors/2.1/_index.md
---
title: "Jakarta Connectors 2.1"
date: 2022-04-17
summary: "Jakarta EE 10 Release"
---
The Jakarta Connectors specification defines a standard architecture for Jakarta EE application components to connect to Enterprise Information Systems.

### New features, enhancements or additions
* Bug Fixes
* Documentation clean up
* Updates required to meet the Java version requirements of Jakarta EE 10

### Removals, deprecations or backwards incompatible changes
none

### Minimum Java SE Version
**Java SE 11 or higher**

# Details

* [Jakarta Connectors 2.1 Release Record](https://projects.eclipse.org/projects/ee4j.jca/releases/2.1.0)
* [Jakarta Connectors 2.1 Specification Document](./jakarta-connectors-spec-2.1.pdf) (PDF)
* [Jakarta Connectors 2.1 Specification Document](./jakarta-connectors-spec-2.1.html) (HTML)
* [Jakarta Connectors 2.1 Javadoc](./apidocs)
* [Jakarta Connectors 2.1 XML Schema](https://jakarta.ee/xml/ns/jakartaee/connector_2_1.xsd)
* [Jakarta Connectors 2.1 TCK](https://download.eclipse.org/jakartaee/connectors/2.1/jakarta-connectors-tck-2.1.0.zip)([sig](https://download.eclipse.org/jakartaee/connectors/2.1/jakarta-connectors-tck-2.1.0.zip.sig),  [sha](https://download.eclipse.org/jakartaee/connectors/2.1/jakarta-connectors-tck-2.1.0.zip.sha256),  [pub](https://jakarta.ee/specifications/jakartaee-spec-committee.pub))
   * Connector: Old DTDs/Schema in deployment descriptors of Tags/Pages/Servlet/Assembly Platform TCK tests - update from optional web-app_2_3.dtd to (required) web-app_5_0.xsd (Issue [#1313](https://github.com/jakartaee/platform-tck/issues/1313))  [Connectors 2.1.2 TCK](https://www.eclipse.org/downloads/download.php?file=/jakartaee/connectors/2.1/jakarta-connectors-tck-2.1.2.zip) ([sig](https://www.eclipse.org/downloads/download.php?file=/jakartaee/connectors/2.1/jakarta-connectors-tck-2.1.2.zip.sig),[sha](https://www.eclipse.org/downloads/download.php?file=/jakartaee/connectors/2.1/jakarta-connectors-tck-2.1.0.zip.sha256),[pub](https://jakarta.ee/specifications/jakartaee-spec-committee.pub))
* Maven coordinates
  * [jakarta.resource:jakarta.resource-api:jar:2.1.0](https://central.sonatype.com/artifact/jakarta.resource/jakarta.resource-api/2.1.0/jar)
* Compatible Implementations used for [ratification](https://www.eclipse.org/projects/efsp/?version=1.2#efsp-ratification).
  * [Eclipse GlassFish 7.0 M4](https://repo1.maven.org/maven2/org/glassfish/main/distributions/glassfish/7.0.0-M4/glassfish-7.0.0-M4.zip)

# Compatible Implementations
  * [Eclipse GlassFish 7.0 M4](https://repo1.maven.org/maven2/org/glassfish/main/distributions/glassfish/7.0.0-M4/glassfish-7.0.0-M4.zip)

# Ballots

## Release Review

The Specification Committee Ballot concluded successfully on 2022-05-09 with the following results.

| Representative                                 | Representative for: | Vote    |
|------------------------------------------------|---------------------|---------|
| Kenji Kazumura                                 | Fujitsu             |    +1   |
| Tom Watson, Emily Jiang                        | IBM                 |    +1   |
| Ed Bratt, Dmitry Kornilov                      | Oracle              |    +1   |
| Andrew Pielage, Petr Aubrecht                  | Payara              |    +1   |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           |    +1   |
| Ivar Grimstad                                  | EE4J PMC            |    +1   |
| Marcelo Ancelmo, Martijn Verburg               | Participant Members |    +1   |
| Werner Keil                                    | Committer Members   |    +1   |
| Jun Qian                                       | Enterprise Members  |    +1   |
| Zhai Luchao                                    | Enterprise Members  |    +1   |
|                                                | **Total**           |  *10**  |

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg02415.html)

## Plan Review

The Specification Committee Ballot concluded successfully on 2021-06-04 with the following results.

| Representative                                 | Representative for: | Vote    |
|------------------------------------------------|---------------------|---------|
| Kenji Kazumura                                 | Fujitsu             |    +1   |
| Dan Bandera, Kevin Sutter                      | IBM                 |    +1   |
| Ed Bratt, Dmitry Kornilov                      | Oracle              |    +1   |
| Andrew Pielage, Matt Gill                      | Payara              |    +1   |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           |    +1   |
| Scott Start, Mark Little                       | REd Hat             |    +1   |
| Ivar Grimstad                                  | EE4J PMC            |    +1   |
| Marcelo Ancelmo, Martijn Verburg               | Participant Members |    +1   |
| Werner Keil                                    | Committer Members   |    +1   |
| Jun Qian                                       | Enterprise Members  |    +1   |
|                                                | **Total**           |  *10**  |

The ballot was held over the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg01820.html)
